--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.19</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
