--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>uio</groupId>
+            <artifactId>text_proc</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
