Implemented the word cloud and empathy map components

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
-
+spring.thymeleaf.cache=false
 spring.messages.basename=create
 
 # max file size - default 1MB
