Fixed errors with wordcloud generation and file resources upload in linux

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
